# audioreach-conf

./: LICENSE  Makefile.am  README.md  configure.ac
.github/workflows/: pre_merge_build.yml  qcom-preflight-checks.yml  qli-checkers.yml
ci/: build.sh  build_options.txt  files_to_copy.sh  knp_build.sh  pkl_build.sh
linux/reference/: Makefile.am  card-defs.xml
linux/reference/acdbdata/: acdb_cal.acdb  workspaceFileXml.qwsp
linux/reference/alsalib/: PCMPlayback.conf  agm.conf  agmvirtualsndcard.conf
nxp/: kvh2xml.h  kvh2xml.pc.in
nxp/reference/: Makefile.am  acdb_cal.acdb  card-defs.xml  workspaceFileXml.qwsp
qcom/: Makefile.am  configure.ac  kvh2xml.h
qcom/qcm6490/: Makefile.am
qcom/qcs9075/: Makefile.am
qcom/qcs9075/acdbdata/: acdb_cal.acdb  workspaceFileXml.qwsp
qcom/qli/: configure.ac
qcom/qli/GLYMUR/: Makefile.am  card-defs.xml
qcom/qli/Kaanapali/: Makefile.am  card-defs.xml
qcom/qli/Kaanapali/acdbdata/: acdb_cal.acdb
qcom/qli/MAHUA/: Makefile.am  card-defs.xml
qcom/qli/MAHUA/acdbdata/: workspaceFileXml.qwsp
qcom/qli/X1E80100/: Makefile.am  card-defs.xml
qcom/qli/qcm6490/: card-defs.xml
qcom/qli/qcs615/: Makefile.am  card-defs.xml
qcom/qli/qcs615/acdbdata/: acdb_cal.acdb  workspaceFileXml.qwsp
qcom/qli/qcs8275/: card-defs.xml
qcom/qli/qcs8300/: card-defs.xml
qcom/qli/qcs9075/: card-defs.xml
qcom/qli/qcs9100/: card-defs.xml
qcom/qli/sm8750/: Makefile.am  card-defs.xml
qcom/qli/sm8750/acdbdata/: acdb_cal.acdb  workspaceFileXml.qwsp
